; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_pata_hpt37x.c_hpt370a_filter.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ata/extr_pata_hpt37x.c_hpt370a_filter.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ata_device = type { i64 }

@ATA_DEV_ATA = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [8 x i8] c"UDMA100\00", align 1
@bad_ata100_5 = common dso_local global i32 0, align 4
@ATA_SHIFT_UDMA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.ata_device*, i64)* @hpt370a_filter to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @hpt370a_filter(%struct.ata_device* %0, i64 %1) #0 {
  %3 = alloca %struct.ata_device*, align 8
  %4 = alloca i64, align 8
  store %struct.ata_device* %0, %struct.ata_device** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.ata_device*, %struct.ata_device** %3, align 8
  %6 = getelementptr inbounds %struct.ata_device, %struct.ata_device* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @ATA_DEV_ATA, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %23

10:                                               ; preds = %2
  %11 = load %struct.ata_device*, %struct.ata_device** %3, align 8
  %12 = load i32, i32* @bad_ata100_5, align 4
  %13 = call i64 @hpt_dma_blacklisted(%struct.ata_device* %11, i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %22

15:                                               ; preds = %10
  %16 = load i32, i32* @ATA_SHIFT_UDMA, align 4
  %17 = shl i32 224, %16
  %18 = xor i32 %17, -1
  %19 = sext i32 %18 to i64
  %20 = load i64, i64* %4, align 8
  %21 = and i64 %20, %19
  store i64 %21, i64* %4, align 8
  br label %22

22:                                               ; preds = %15, %10
  br label %23

23:                                               ; preds = %22, %2
  %24 = load %struct.ata_device*, %struct.ata_device** %3, align 8
  %25 = load i64, i64* %4, align 8
  %26 = call i64 @ata_bmdma_mode_filter(%struct.ata_device* %24, i64 %25)
  ret i64 %26
}

declare dso_local i64 @hpt_dma_blacklisted(%struct.ata_device*, i8*, i32) #1

declare dso_local i64 @ata_bmdma_mode_filter(%struct.ata_device*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
